--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -10,8 +10,10 @@
         android:id="@+id/top_bar">
         <ImageButton
             android:id="@+id/btn_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="20dp"
+            android:layout_height="25dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/img_233998"/>
         <TextView
             android:id="@+id/text_top_title"
             android:layout_width="wrap_content"
