--- a/app/src/main/res/layout/item_historylist.xml
+++ b/app/src/main/res/layout/item_historylist.xml
@@ -4,13 +4,20 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
+        android:layout_margin="5dp"
         android:id="@+id/text_input"
         android:text="입력값"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
+        android:layout_margin="5dp"
         android:id="@+id/text_result"
         android:text="결과값"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <View
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"/>
 </LinearLayout>
