--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -8,19 +8,17 @@
         android:layout_height="50dp">
         <ImageButton
             android:id="@+id/btn_back"
-            android:layout_width="20dp"
-            android:layout_height="25dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/img_233998"/>
+            style="@style/BackBtn" />
         <TextView
+            style="@style/TopTitleBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="피보나치 수열 계산하기"
-            android:layout_gravity="center"/>
+            android:text="피보나치 수열 계산하기"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:orientation="vertical">
         <EditText
             android:id="@+id/edit_input"
@@ -39,17 +37,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="연산 결과는"
+            android:textSize="20dp"
             android:gravity="center"/>
         <TextView
             android:id="@+id/text_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="12345"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:gravity="center"/>
     </LinearLayout>
 </LinearLayout>
