--- a/app/src/main/res/layout/item_historylist.xml
+++ b/app/src/main/res/layout/item_historylist.xml
@@ -3,18 +3,40 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal">
+
+       <TextView
+           android:layout_margin="5dp"
+           android:text="입력값"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
     <TextView
         android:layout_margin="5dp"
         android:id="@+id/text_input"
         android:text="입력값"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+   </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_margin="5dp"
+            android:text="결과값"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     <TextView
         android:layout_margin="5dp"
         android:id="@+id/text_result"
         android:text="결과값"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    </LinearLayout>
     <View
         android:layout_margin="5dp"
         android:layout_width="match_parent"
