modified MVP pattern & added some styles components

--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -49,7 +49,7 @@
             android:id="@+id/text_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="12345"
+            android:text="-"
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/black"
