--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,14 @@
             android:textAlignment="center"
             android:layout_margin="10dp"/>
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/BasicAlign"
             android:id="@+id/btn_go_to_cal"
             android:text="계산하러 가기"
-            android:layout_gravity="center"/>
+           />
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/BasicAlign"
             android:id="@+id/btn_cal_history"
             android:text="계산 이력"
-            android:layout_gravity="center"/>
+            />
     </LinearLayout>
 </LinearLayout>
