--- a/app/src/main/res/layout/item_historylist.xml
+++ b/app/src/main/res/layout/item_historylist.xml
@@ -10,13 +10,13 @@
 
        <TextView
            android:layout_margin="5dp"
-           android:text="입력값"
+           android:text="@string/input_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
     <TextView
         android:layout_margin="5dp"
         android:id="@+id/text_input"
-        android:text="입력값"
+        android:text="@string/input_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
    </LinearLayout>
@@ -26,13 +26,13 @@
         android:orientation="horizontal">
         <TextView
             android:layout_margin="5dp"
-            android:text="결과값"
+            android:text="@string/result_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     <TextView
         android:layout_margin="5dp"
         android:id="@+id/text_result"
-        android:text="결과값"
+        android:text="@string/result_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
